Fix categories in products
